gcc/testsuite/rust/rustc/ui/structs/ice-struct-tail-normalization-113272_dg.rs
trait Trait {
    type RefTarget;
}

impl Trait for () where Missing: Trait {}
// { dg-error ".E0046." "" { target *-*-* } .-1 }
// { dg-error ".E0046." "" { target *-*-* } .-2 }

struct Other {
    data: <() as Trait>::RefTarget,
}

fn main() {
    unsafe {
        std::mem::transmute::<Option<()>, Option<&Other>>(None);
    }
}

